--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,9 @@
 @import './base.css';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 #app {
   background-color: #FEFBF6;
   font-weight: normal;
+  font-family: "Noto Sans", sans-serif;
 }
+
