--- a/src/styles/LayoutView.css
+++ b/src/styles/LayoutView.css
@@ -1,10 +1,27 @@
 h3 {
-    color: #A3C4A8;
+  color: #A3C4A8;
 }
 
-.tabs{ display:flex; gap:12px; padding:12px 8px 16px; }
-.tab{
-  padding:10px 16px; border-radius:10px; border:1px solid #d6dfd2;
-  background:#e7f0e6; text-decoration:none; color:#2b3b31; font-weight:600;
+.tabs {
+  display: flex; 
+  gap: 15px; 
+  padding: 12px 8px 16px; 
 }
-.tab.router-link-active{ background:#d5e6d7; }
+
+.tab {
+  width: 150px;
+  height: 45px;
+  padding: 10px 16px; 
+  border-radius: 10px; 
+  background: #D8EAD2; 
+  color: #6B7280; 
+  text-decoration: none;
+  font-weight: 500;
+  text-align: center;
+  justify-content: center;
+}
+
+.tab.router-link-active { 
+  background: #A3C4A8; 
+  color: #FEFBF6;
+}
