create login page

--- a/src/styles/BuildingCard.css
+++ b/src/styles/BuildingCard.css
@@ -30,7 +30,7 @@
 
 .icon-add {
     border-radius: 50%;
-    padding: 10px;
+    padding: 8px 13px 8px 13px;
     background-color: #A3C4A8;
     color: #D8EAD2;
 }
