--- a/src/styles/POIsView.css
+++ b/src/styles/POIsView.css
@@ -1,3 +1,26 @@
-.test {
-    color: #2F2F2F;
+.poi-title {
+    font-weight: 600;
+    font-size: 18px;
+    color: #2f2f2f;
+}
+
+.poi-list {
+    display: flex;
+    width: 220px;
+    
+}
+
+.poi-btn {
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: 500;
+    width: 100%;
+}
+
+.poi-btn.add {
+    background-color: #7DA085;
+    color: #fff;
+    align-items: center;
 }
