--- a/src/styles/POIsView.css
+++ b/src/styles/POIsView.css
@@ -4,6 +4,12 @@
     color: #2f2f2f;
 }
 
+.poi-panel {
+    display: flex;
+    flex-direction: column;
+    width: 220px;
+}
+
 .poi-list {
     display: flex;
     width: 220px;
