--- a/src/styles/BeaconsView.css
+++ b/src/styles/BeaconsView.css
@@ -3,3 +3,18 @@
     font-size: 18px;
     color: #2f2f2f;
 }
+
+.beacon-btn {
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: 500;
+    width: 100%;
+}
+
+.beacon-btn.add{
+    background-color: #7DA085;
+    color: #fff;
+    align-items: center;
+}
