--- a/src/styles/beaconEditor.css
+++ b/src/styles/beaconEditor.css
@@ -66,15 +66,16 @@
     box-shadow: 0 0 0 1px #A3C4A8;
 }
 
-.beacon-action {
+.beacon-editor-action {
     display: flex;
     gap: 10px;
     justify-content: flex-end;
     margin-top: 30px;
 }
 
-.btn {
-    width: 80px;
+.beacon-editor-btn {
+    width: 90px;
+    padding: 8px;
     border-radius: 10px;
     cursor: pointer;
     font-weight: 600;
@@ -82,10 +83,10 @@
     text-align: center;
 }
 
-.btn.delete {
+.beacon-editor-btn.delete {
     background-color: #CF4648;
 }
 
-.btn.save {
+.beacon-editor-btn.save {
     background-color: #7DA085;
 }
