--- a/src/styles/LoginView.css
+++ b/src/styles/LoginView.css
@@ -14,12 +14,18 @@
   align-items: center;
 }
 
-.hero {
+.img-container {
   height: 700px;
   border-radius: 12px;
-  background: #D8EAD2;         
   display: grid;
   place-items: center;
+}
+
+.img-container img {
+  width: 100%;
+  height: 700px;
+  object-fit: cover;
+  border-radius: 20px;
 }
 
 .form {
