--- a/src/styles/Editor.css
+++ b/src/styles/Editor.css
@@ -1,61 +1,62 @@
-.poi-edit {
+.editor {
     padding: 10px 10px;
     color: #2f2f2f;
 }
 
-.title-row {
+.editor .title-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: 20px;
 }
 
-.name-input {
+.editor .title {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.editor .name-input {
     width: 100%;
     background-color: transparent;
     outline: none;
     font-weight: 500;
 }
 
-.section-divider {
-    margin-top: 5px;
+.editor .section-divider { 
+    margin-top: 5px; 
 }
 
-.poi-field {
+.editor .field {
     display: flex;
     flex-direction: column;
     gap: 5px;
     margin-bottom: 15px;
 }
 
-.poi-field.info {
-    margin-top: 20px;
+.editor .field.info { 
+    margin-top: 20px; 
 }
 
-.title {
-    font-size: 16px;
-    font-weight: 500;
+.editor .label { 
+    font-size: 16px; font-weight: 500; 
 }
 
-.textarea {
+.editor .textarea {
     background-color: #FEFBF6;
     outline: none;
     border-radius: 10px;
     padding: 12px;
+    margin-top: 5px;
 }
 
-.textarea:focus {
-    box-shadow: 0 0 0 3px #A3C4A8;
-}
-
-.select-wrap {
+.editor .select-wrap {
     position: relative;
     display: inline-flex;
     align-items: center;
     width: 150px;
 }
 
-.select {
+.editor .select { 
     background-color: #FEFBF6;
     width: 100%;
     height: 35px;
@@ -64,18 +65,19 @@
     outline: none;
 }
 
-.select:focus {
+.editor .textarea:focus,
+.editor .select:focus {
     box-shadow: 0 0 0 3px #A3C4A8;
 }
 
-.poi-editor-action {
+.editor .editor-action {
     display: flex;
     gap: 10px;
     justify-content: flex-end;
     margin-top: 30px;
 }
 
-.poi-editor-btn {
+.editor .editor-btn {
     width: 90px;
     padding: 8px;
     border-radius: 10px;
@@ -83,22 +85,23 @@
     font-weight: 600;
     color: #fff;
     text-align: center;
+    border: none;
 }
 
-.poi-editor-btn.save {
-    background-color: #7DA085;
+.editor .editor-btn.save { 
+    background-color: #7DA085; 
 }
 
-.poi-editor-btn.cancel {
-    background-color: #CF4648;
+.editor .editor-btn.cancel { 
+    background-color: #CF4648; 
 }
 
-.toggle-row {
-    display: flex;
-    align-items: center;
+/* Toggle styles (POI editor) */
+.editor .toggle-row {
+    display: flex; 
+    align-items: center; 
     justify-content: space-between;
-    gap: 25px;
-    /* background-color: #fff; */
+    gap: 25px; 
     margin-top: 10px;
 }
 
@@ -155,4 +158,9 @@
 
 .switch:has(input:focus-visible) .slider {
     box-shadow: 0 0 0 3px var(--brand-weak);
+}
+
+/* Node Editor */
+#existing-portals {
+    color: #CF4648;
 }
