--- a/src/styles/FloorPlanView.css
+++ b/src/styles/FloorPlanView.css
@@ -51,6 +51,14 @@
     color: #FEFBF6;
 }
 
+.no-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+}
+
 .floor-actions {
     display: flex;
     flex-direction: column;
